--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About our Website</title>
+  <title>About Marcos in the Pages of History</title>
   <meta charset="UTF-8"/>
   <meta name="author" content="Francesca R. Muya"/>
   <meta name="keywords" content="CSS, selectors, properties"/>
@@ -12,19 +12,18 @@
   <link rel="shortcut icon" type="image/x-icon" href="../images/MPH.png"/>
 </head>
 <body>
-  <!---NAVIGATION--->
-    <header>
-      <img class="logo" src="../images/marcosLogo.png" alt="MPH Logo" width="300px">
-      <nav>
-        <ul class="nav-links">
-          <li><a href="About.html">About</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-          <li><a href="Resources.html">Reources</a></li>
-        </ul>
-      </nav>
-      <a href="../index.html"><button class="navbutton">Home</button></a>  
-    </header>
-  
+   <header>
+    <img class="logo" src="../images/marcosLogo.png" alt="MPH Logo" width="300px">
+    <nav>
+      <ul class="nav-links">
+        <li><a href="About.html">About</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="Resources.html">Reources</a></li>
+        <input type="text" placeholder="Search..">
+      </ul>
+    </nav>
+    <a href="index.html"><button class="navbutton">Home</button></a>  
+  </header>
   <h2>About our website</h2>
     <p class="par">
       Marcos in the Pages of History is a digital educational platform that documents the timeline of the Marcos family in the political circle of the Philippines. The lack of proper research and disregard for history allowed the Marcoses to regain popularity among the masses. Blatant disinformation, historical distortion, troll farms, and propaganda have manipulated the public to deny history and glorify the atrocities during the Marcos Dictatorship. 
